remove Hero width to avoid overflow-x

--- a/src/styles/applyPage/_applicationHero.scss
+++ b/src/styles/applyPage/_applicationHero.scss
@@ -7,6 +7,7 @@
     background-position: top;
     background-size: contain;
     width: 100vw;
+    overflow-x: hidden;
   }
 
   &--heading {
